# ubt

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  TODO.md  cliff.toml  install.sh  release.toml  sonar-project.properties  ubt.toml
.github/workflows/: ci.yml  release.yml
plugins/: cpp.toml  deno.toml  dotnet.toml  go.toml  java.toml  node.toml  php.toml  python.toml  ruby.toml  rust.toml
specs/: IMPROVEMENTS.md  IMPROVEMENTS_2.md  PLAN.md  SPEC.md
src/: cli.rs  completions.rs  config.rs  detect.rs  error.rs  executor.rs  lib.rs  main.rs
src/commands/: alias.rs  config.rs  info.rs  init.rs  mod.rs  tool.rs
src/plugin/: declarative.rs  mod.rs
tests/: e2e.rs  integration.rs
tests/e2e/docker/cpp/: CMakeLists.txt  Dockerfile
tests/e2e/docker/deno/: Dockerfile  deno.json  main_test.ts
tests/e2e/docker/dotnet/: Dockerfile  Hello.csproj  UnitTest.cs
tests/e2e/docker/go/: Dockerfile  main_test.go
tests/e2e/docker/java-gradle/: Dockerfile  build.gradle
tests/e2e/docker/java-mvn/: Dockerfile  pom.xml
tests/e2e/docker/node-bun/: Dockerfile  index.test.js  package.json
tests/e2e/docker/node-deno/: Dockerfile  hello_test.ts
tests/e2e/docker/node-npm/: Dockerfile  index.test.js  package.json
tests/e2e/docker/node-pnpm/: Dockerfile
tests/e2e/docker/node-yarn/: Dockerfile
tests/e2e/docker/php/: Dockerfile  composer.json
tests/e2e/docker/python/: Dockerfile  test_hello.py
tests/e2e/docker/ruby/: Dockerfile  Rakefile  hello.rb
tests/e2e/docker/ruby/test/: test_hello.rb
tests/e2e/docker/rust/: Dockerfile
(+4 files in other folders)
