[package]
name = "ubt-cli"
version = "0.2.0"
edition = "2024"
rust-version = "1.93"
description = "Universal build tool — one CLI for every ecosystem"
license = "MIT"
repository = "https://github.com/pl-buiquang/ubt"
keywords = ["build", "cli", "universal", "tooling", "dev"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ubt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
globset = ">=0.4, <0.4.16"
which = "7"
dirs = "6"
shell-words = "1"

[dev-dependencies]
tempfile = ">=3, <3.19"
assert_cmd = "2"
predicates = "3"
